--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ python:
 before_install:
   - sudo apt-get update
   - sudo apt-get install python3
+  - python --version
 script:
-  -test_rpn
+  -python3 -n unittest
