--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
 before_install:
   - python3 --version
   - pip3 install -U pip
-  - pip3 install unittest
+  - pip install unittest
 script:
   -python3 -n test_rpn
