--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
 python:
+  - "3.5"
   - "3.8"
 before_install:
   - python3 --version
-  - pip3 install -U pip
-  - pip install unittest
-script:
-  -python3 -n test_rpn
+  - brew install python3
+script: python3 -n test_rpn
