--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python:
   - "3.5"
-  - "3.8"
 before_install:
   - python3 --version
-  - brew install python3
-script: python3 -n test_rpn
+install:
+  -
+script: python3 -m test_rpn
